# SimpleRobots

./: .clang-format  CMakeLists.txt  README.md  package.xml
.github/conf/: presets.txt  svg_replace.py
cmake/: gen.cmake
include/simple_robots/: common.hpp  data_struct.hpp  kinematic_simulator.hpp  simulator.hpp  urdf_loader.hpp
rviz2/: standard.rviz
scara/: README.md  scara.urdf
scara/include/sp_scara/: node.hpp
scara/launch/: scara.launch.py
scara/meshs/: base.dae  link1.dae  link2.dae  link3.dae
scara/scripts/: scara.py
scara/src/: main.cpp
src/: kinematic_simulator.cpp  simulator.cpp
